--- a/README.mkd
+++ b/README.mkd
@@ -12,22 +12,24 @@ default "flat" mode of operation.
 
 For example, this `nose`-style test module:
 
-    class TestShape(object):
-        def test_has_sides(self):
-            pass
+```python
+class TestShape(object):
+    def test_has_sides(self):
+        pass
 
-        def test_can_calculate_its_perimeter(self):
-            pass
+    def test_can_calculate_its_perimeter(self):
+        pass
 
-    class TestSquare(object):
-        def test_is_a_shape(self):
-            pass
+class TestSquare(object):
+    def test_is_a_shape(self):
+        pass
 
-        def test_has_four_sides(self):
-            pass
+    def test_has_four_sides(self):
+        pass
 
-        def test_has_sides_of_equal_length(self):
-            pass
+    def test_has_sides_of_equal_length(self):
+        pass
+```
 
 normally tests like so, in a single flat list:
 
@@ -60,27 +62,29 @@ does not begin with an underscore (`'_'`) and which is defined locally.
 
 For example, given the following code inside `tests/feature_name.py`:
 
-    from external_module import a_function, AClass
+```python
+from external_module import a_function, AClass
 
-    def _helper_function(args):
-        return a_function(args)
+def _helper_function(args):
+    return a_function(args)
 
-    class _Parent(object):
-        def this_will_not_get_tested():
-            pass
-
-    class Feature(_Parent):
-        def should_have_some_attribute(self):
-            _helper_function(AClass)
-
-        def does_something_awesome(self):
-            self._helper_method()
-
-        def _helper_method(self):
-            pass
-
-    def something_tested_by_itself_outside_a_class():
+class _Parent(object):
+    def this_will_not_get_tested():
         pass
+
+class Feature(_Parent):
+    def should_have_some_attribute(self):
+        _helper_function(AClass)
+
+    def does_something_awesome(self):
+        self._helper_method()
+
+    def _helper_method(self):
+        pass
+
+def something_tested_by_itself_outside_a_class():
+    pass
+```
 
 only the following items will be picked up as test cases:
 
