--- a/CHANGES.mkd
+++ b/CHANGES.mkd
@@ -1,5 +1,9 @@
 Crappy by-hand changelog until we set up proper Sphinx docs :)
 
+## 0.11.4
+### (2015.03.12)
+
+* Don't accidentally discard return values of functions wrapped with `@trap`.
 
 ## 0.11.3
 ### (2015.01.02)
