--- a/CHANGES.mkd
+++ b/CHANGES.mkd
@@ -1,3 +1,9 @@
+## 1.3.1
+### (2015.09.19)
+
+* A couple of minor packaging-related updates, including marking wheel archives
+  as `universal`.
+
 ## 1.3.0
 ### (2015.09.19)
 
